--- a/tasks/CentOS.yml
+++ b/tasks/CentOS.yml
@@ -1,2 +1,13 @@
 ---
 # tasks file for freeradius (CentOS specific)
+
+
+- name: Install FreeRADIUS packages
+  become: yes
+  yum:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - "{{ freeradius_packages }}"
+  tags:
+    - freeradius
