--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: Kevin Brebanov
+  author: Todd Davis
   description: Installs FreeRADIUS
-  company:
+  company: RingSquared
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -33,12 +33,14 @@ galaxy_info:
   # platform on this list, let us know and we'll get it added!
   #
   platforms:
-  #- name: EL
-  #  versions:
+  - name: EL
+    versions:
   #  - all
   #  - 5
   #  - 6
-  #  - 7
+    - "7"
+    - "8"
+    - "9"
   #- name: GenericUNIX
   #  versions:
   #  - all
