chore: Set configuration directory from var
CentOS and Ubuntu use different directories for configuration.
This change sets the directory to /etc/freeradius for Ubuntu and
/etc/raddb for CentOS

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
   become: yes
   template:
     src: '{{ freeradius_template }}'
-    dest: /etc/freeradius/radiusd.conf
+    dest: '{{ freeradius_confdir }}/radiusd.conf'
     owner: root
     group: freerad
     mode: 0640
