--- a/vars/CentOS.yml
+++ b/vars/CentOS.yml
@@ -5,3 +5,4 @@ freeradius_packages:
   - freeradius-utils
 freeradius_service_name: freeradius
 freeradius_confdir: /etc/raddb
+freeradius_group: radiusd
