--- a/vars/Ubuntu.yml
+++ b/vars/Ubuntu.yml
@@ -5,3 +5,4 @@ freeradius_packages:
   - freeradius
 freeradius_service_name: freeradius
 freeradius_confdir: /etc/freeradius
+freeradius_group: freerad
