--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,14 @@
 # defaults file for freeradius
 
 freeradius_template: radiusd.conf.j2
+freeradius_modsql_template: mod-sql.j2
+freeradius_sites:
+  - { type: 'sites', name: 'default' }
+  - { type: 'sites', name: 'inner-tunnel' }
+  - { type: 'sites', name: 'sql'}
+freeradius_sqL_mod: postgresql
+freeradius_db_user: freeradius
+freeradius_db_password: asdf
+freeradius_db_name: radius
+freeradius_db_hosts:
+  - localhost
