--- a/tasks/CentOS.yml
+++ b/tasks/CentOS.yml
@@ -2,6 +2,13 @@
 # tasks file for freeradius (CentOS specific)
 
 
+- name: Enable CRB repo
+  become: yes
+  yum_repository:
+    name: crb
+    file: /etc/yum.repos.d/centos.repo
+    enabled: true
+
 - name: Install FreeRADIUS packages
   become: yes
   yum:
