--- a/tasks/CentOS.yml
+++ b/tasks/CentOS.yml
@@ -7,6 +7,7 @@
   yum_repository:
     name: crb
     file: /etc/yum.repos.d/centos.repo
+    metalink: https://mirrors.centos.org/metalink?repo=centos-crb-$stream&arch=$basearch&protocol=https,http
     enabled: true
 
 - name: Install FreeRADIUS packages
