--- a/tasks/CentOS.yml
+++ b/tasks/CentOS.yml
@@ -8,6 +8,7 @@
     name: crb
     file: /etc/yum.repos.d/centos.repo
     metalink: https://mirrors.centos.org/metalink?repo=centos-crb-$stream&arch=$basearch&protocol=https,http
+    description: CentOS Stream $releasever - CRB
     enabled: true
 
 - name: Install FreeRADIUS packages
