--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@ freeradius_modsql_template: mod-sql.j2
 freeradius_sites:
   - { type: 'sites', name: 'default' }
   - { type: 'sites', name: 'inner-tunnel' }
-freeradius_sqL_mod: postgresql
+freeradius_sql_mod: postgresql
 freeradius_db_user: freeradius
 freeradius_db_password: asdf
 freeradius_db_name: radius
