--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -45,7 +45,7 @@
   become: true
   template:
     src: '{{ freeradius_modsql_template }}'
-    dest: '{{ freeradius_confdir }}/mods-enabled/sql{{ index }}'
+    dest: '{{ freeradius_confdir }}/mods-enabled/{{ item.name }}'
     owner: root
     group: '{{ freeradius_group }}'
     mode: 0640
