--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -32,7 +32,7 @@
   become: true
   copy:
     src: "{{ freeradius_default_file }}"
-    path: "{{ freeradius_confdir }}sites-enabled/default"
+    dest: "{{ freeradius_confdir }}sites-enabled/default"
     state: present
     mode: 0640
     owner: root
