--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,6 +41,19 @@
   tags:
     - freeradius
 
+- name: Copy postgresql queries
+  become: true
+  copy:
+    src: "psql-queries.conf"
+    dest: "{{ freeradius_confdir }}/mods-config/sql/main/postgresql/queries.conf"
+    mode: 0640
+    owner: root
+    group: '{{ freeradius_group }}'
+  notify:
+    - reload freeradius
+  tags:
+    - freeradius
+
 - name: Create radiusd configuration file
   become: true
   template:
