Make it so ssl can be disabled

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,7 @@ freeradius_db_user: freeradius
 freeradius_db_password: asdf
 freeradius_db_name: radius
 freeradius_db_port: 5432
+freeradius_db_sslmode: require
 freeradius_db_hosts:
   - { name: 'localhost', address: 'localhost', query: true, write: true }
 freeradius_clients:
