--- a/tasks/CentOS.yml
+++ b/tasks/CentOS.yml
@@ -6,7 +6,7 @@
   become: yes
   yum_repository:
     name: crb
-    file: /etc/yum.repos.d/centos.repo
+    file: /etc/yum.repos.d/centos
     metalink: https://mirrors.centos.org/metalink?repo=centos-crb-$stream&arch=$basearch&protocol=https,http
     description: CentOS Stream $releasever - CRB
     enabled: true
